<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_atualizar"
        android:orderInCategory="100"
        android:title="@string/atualizar"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sobre"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/sobre"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sair"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/sair"
        app:showAsAction="never" />


</menu>
