<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="tcc.utfpr.edu.br.soec.fragment.CadastrarCurriculoTabCandidatoFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_cadastrar_curriculo_tab_candidato_titulacao"
            style="@style/StyleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulacao"
            android:inputType="textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_cadastrar_curriculo_tab_candidato_area_profissional"
            style="@style/StyleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_profissional"
            android:inputType="textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_cadastrar_curriculo_tab_candidato_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingRight="16dp"
        android:drawableRight="@drawable/ic_arrow_forward_white_24dp"
        android:text="@string/salvar"/>

</LinearLayout>
